--- a/shelter/sass/style.css
+++ b/shelter/sass/style.css
@@ -669,7 +669,6 @@ p {
 
 .footer__wrapper {
   display: flex;
-  gap: 160px;
   justify-content: space-between;
   padding: 42px 0 0;
 }
@@ -677,8 +676,14 @@ p {
   .footer__wrapper {
     flex-wrap: wrap;
     justify-content: center;
-    gap: 66px 60px;
+    gap: 64px 60px;
     padding: 30px 0 0;
+  }
+}
+@media (max-width: 720px) {
+  .footer__wrapper {
+    gap: 40px;
+    padding: 30px 10px 0;
   }
 }
 
@@ -694,7 +699,12 @@ p {
   }
 }
 .footer__contact-card_right {
-  gap: 33px;
+  gap: 32px;
+}
+@media (max-width: 720px) {
+  .footer__contact-card_right {
+    gap: 40px;
+  }
 }
 .footer__contact-card h3 {
   text-align: left;
@@ -702,6 +712,7 @@ p {
 }
 @media (max-width: 720px) {
   .footer__contact-card h3 {
+    padding: 0 11px;
     text-align: center;
   }
 }
@@ -728,6 +739,11 @@ p {
     flex-grow: 1;
   }
 }
+@media (max-width: 720px) {
+  .footer__puppy {
+    max-width: 260px;
+  }
+}
 
 .nowrap {
   white-space: nowrap;
@@ -744,6 +760,21 @@ p {
     font-weight: 400;
     line-height: 130%;
     letter-spacing: 0.06em;
+  }
+}
+
+@media (max-width: 720px) {
+  .footer__visible-capture {
+    display: none;
+  }
+}
+
+.footer__hidden-capture {
+  display: none;
+}
+@media (max-width: 720px) {
+  .footer__hidden-capture {
+    display: block;
   }
 }
 
